OCLParser.java
// Generated from OCL.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OCLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, T__140=141, T__141=142, T__142=143, 
		T__143=144, T__144=145, T__145=146, T__146=147, T__147=148, T__148=149, 
		T__149=150, T__150=151, T__151=152, T__152=153, T__153=154, T__154=155, 
		T__155=156, T__156=157, T__157=158, T__158=159, T__159=160, T__160=161, 
		T__161=162, T__162=163, T__163=164, T__164=165, T__165=166, T__166=167, 
		T__167=168, T__168=169, T__169=170, T__170=171, T__171=172, T__172=173, 
		T__173=174, T__174=175, T__175=176, T__176=177, T__177=178, T__178=179, 
		T__179=180, T__180=181, T__181=182, T__182=183, T__183=184, T__184=185, 
		T__185=186, T__186=187, T__187=188, T__188=189, T__189=190, T__190=191, 
		T__191=192, T__192=193, T__193=194, T__194=195, T__195=196, T__196=197, 
		T__197=198, T__198=199, T__199=200, T__200=201, T__201=202, T__202=203, 
		T__203=204, T__204=205, T__205=206, T__206=207, T__207=208, FLOAT_LITERAL=209, 
		STRING1_LITERAL=210, STRING2_LITERAL=211, NULL_LITERAL=212, MULTILINE_COMMENT=213, 
		INTEGRAL=214, SIGMA=215, NEWLINE=216, INT=217, ID=218, WS=219;
	public static final int
		RULE_specification = 0, RULE_classifier = 1, RULE_interfaceDefinition = 2, 
		RULE_classDefinition = 3, RULE_classBody = 4, RULE_classBodyElement = 5, 
		RULE_attributeDefinition = 6, RULE_operationDefinition = 7, RULE_parameterDeclarations = 8, 
		RULE_parameterDeclaration = 9, RULE_idList = 10, RULE_usecaseDefinition = 11, 
		RULE_usecaseBody = 12, RULE_usecaseBodyElement = 13, RULE_invariant = 14, 
		RULE_stereotype = 15, RULE_datatypeDefinition = 16, RULE_enumeration = 17, 
		RULE_enumerationLiterals = 18, RULE_enumerationLiteral = 19, RULE_type = 20, 
		RULE_expressionList = 21, RULE_expression = 22, RULE_basicExpression = 23, 
		RULE_conditionalExpression = 24, RULE_lambdaExpression = 25, RULE_letExpression = 26, 
		RULE_logicalExpression = 27, RULE_equalityExpression = 28, RULE_additiveExpression = 29, 
		RULE_factorExpression = 30, RULE_factor2Expression = 31, RULE_arrowExpression = 32, 
		RULE_setExpression = 33, RULE_statement = 34, RULE_statementList = 35, 
		RULE_nlpscript = 36, RULE_nlpstatement = 37, RULE_loadStatement = 38, 
		RULE_assignStatement = 39, RULE_storeStatement = 40, RULE_analyseStatement = 41, 
		RULE_displayStatement = 42, RULE_identifier = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"specification", "classifier", "interfaceDefinition", "classDefinition", 
			"classBody", "classBodyElement", "attributeDefinition", "operationDefinition", 
			"parameterDeclarations", "parameterDeclaration", "idList", "usecaseDefinition", 
			"usecaseBody", "usecaseBodyElement", "invariant", "stereotype", "datatypeDefinition", 
			"enumeration", "enumerationLiterals", "enumerationLiteral", "type", "expressionList", 
			"expression", "basicExpression", "conditionalExpression", "lambdaExpression", 
			"letExpression", "logicalExpression", "equalityExpression", "additiveExpression", 
			"factorExpression", "factor2Expression", "arrowExpression", "setExpression", 
			"statement", "statementList", "nlpscript", "nlpstatement", "loadStatement", 
			"assignStatement", "storeStatement", "analyseStatement", "displayStatement", 
			"identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "'{'", "'}'", "'interface'", "'extends'", "'class'", 
			"'implements'", "'attribute'", "'identity'", "'derived'", "':'", "':='", 
			"';'", "'static'", "'operation'", "'('", "')'", "'pre:'", "'post:'", 
			"'activity:'", "','", "'usecase'", "'parameter'", "'precondition'", "'extendedBy'", 
			"'::'", "'invariant'", "'stereotype'", "'='", "'datatype'", "'enumeration'", 
			"'literal'", "'Sequence'", "'Set'", "'Bag'", "'OrderedSet'", "'SortedSet'", 
			"'Ref'", "'Map'", "'SortedMap'", "'Function'", "'.'", "'['", "']'", "'@pre'", 
			"'if'", "'then'", "'else'", "'endif'", "'lambda'", "'in'", "'let'", "'not'", 
			"'and'", "'&'", "'or'", "'xor'", "'=>'", "'implies'", "'<'", "'>'", "'>='", 
			"'<='", "'/='", "'<>'", "'/:'", "'<:'", "'+'", "'-'", "'..'", "'|->'", 
			"'*'", "'/'", "'mod'", "'div'", "'?'", "'!'", "'->size()'", "'->copy()'", 
			"'->isEmpty()'", "'->notEmpty()'", "'->asSet()'", "'->asBag()'", "'->asOrderedSet()'", 
			"'->asSequence()'", "'->sort()'", "'->any()'", "'->log()'", "'->exp()'", 
			"'->sin()'", "'->cos()'", "'->tan()'", "'->asin()'", "'->acos()'", "'->atan()'", 
			"'->log10()'", "'->first()'", "'->last()'", "'->front()'", "'->tail()'", 
			"'->reverse()'", "'->tanh()'", "'->sinh()'", "'->cosh()'", "'->floor()'", 
			"'->ceil()'", "'->round()'", "'->abs()'", "'->oclType()'", "'->allInstances()'", 
			"'->oclIsUndefined()'", "'->oclIsInvalid()'", "'->oclIsNew()'", "'->sum()'", 
			"'->prd()'", "'->max()'", "'->min()'", "'->sqrt()'", "'->cbrt()'", "'->sqr()'", 
			"'->characters()'", "'->toInteger()'", "'->toReal()'", "'->toBoolean()'", 
			"'->display()'", "'->toUpperCase()'", "'->toLowerCase()'", "'->unionAll()'", 
			"'->intersectAll()'", "'->concatenateAll()'", "'->pow'", "'->gcd'", "'->at'", 
			"'->union'", "'->intersection'", "'->includes'", "'->excludes'", "'->including'", 
			"'->excluding'", "'->excludingKey'", "'->excludingValue'", "'->includesAll'", 
			"'->symmetricDifference'", "'->excludesAll'", "'->prepend'", "'->append'", 
			"'->count'", "'->apply'", "'->hasMatch'", "'->isMatch'", "'->firstMatch'", 
			"'->indexOf'", "'->lastIndexOf'", "'->split'", "'->hasPrefix'", "'->hasSuffix'", 
			"'->equalsIgnoreCase'", "'->oclAsType'", "'->oclIsTypeOf'", "'->oclIsKindOf'", 
			"'->oclAsSet'", "'->collect'", "'|'", "'->select'", "'->reject'", "'->forAll'", 
			"'->exists'", "'->exists1'", "'->one'", "'->any'", "'->closure'", "'->sortedBy'", 
			"'->isUnique'", "'->subrange'", "'->replace'", "'->replaceAll'", "'->replaceAllMatches'", 
			"'->replaceFirstMatch'", "'->insertAt'", "'->insertInto'", "'->setAt'", 
			"'->iterate'", "'OrderedSet{'", "'Bag{'", "'Set{'", "'SortedSet{'", "'Sequence{'", 
			"'Map{'", "'SortedMap{'", "'skip'", "'return'", "'continue'", "'break'", 
			"'var'", "'while'", "'do'", "'for'", "'repeat'", "'until'", "'execute'", 
			"'call'", "'load'", "'into'", "'store'", "'analyse'", "'using'", "'display'", 
			"'on'", null, null, null, "'null'", null, "'\u222B'", "'\u2211'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "FLOAT_LITERAL", "STRING1_LITERAL", "STRING2_LITERAL", 
			"NULL_LITERAL", "MULTILINE_COMMENT", "INTEGRAL", "SIGMA", "NEWLINE", 
			"INT", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OCL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SpecificationContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EOF() { return getToken(OCLParser.EOF, 0); }
		public List<ClassifierContext> classifier() {
			return getRuleContexts(ClassifierContext.class);
		}
		public ClassifierContext classifier(int i) {
			return getRuleContext(ClassifierContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).exitSpecification(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__0);
			setState(89);
			identifier();
			setState(90);
			match(T__1);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__5) | (1L << T__21) | (1L << T__29) | (1L << T__30))) != 0)) {
				{
				{
				setState(91);
				classifier();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(T__2);
			setState(98);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassifierContext extends ParserRuleContext {
		public ClassDefinitionContext classDefinition() {
			return getRuleContext(ClassDefinitionContext.class,0);
		}
		public InterfaceDefinitionContext interfaceDefinition() {
			return getRuleContext(InterfaceDefinitionContext.class,0);
		}
		public UsecaseDefinitionContext usecaseDefinition() {
			return getRuleContext(UsecaseDefinitionContext.class,0);
		}
		public DatatypeDefinitionContext datatypeDefinition() {
			return getRuleContext(DatatypeDefinitionContext.class,0);
		}
		public EnumerationContext enumeration() {
			return getRuleContext(EnumerationContext.class,0);
		}
		public ClassifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).enterClassifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).exitClassifier(this);
		}
	}

	public final ClassifierContext classifier() throws RecognitionException {
		ClassifierContext _localctx = new ClassifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classifier);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				classDefinition();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				interfaceDefinition();
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				usecaseDefinition();
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				datatypeDefinition();
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				enumeration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceDefinitionContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public InterfaceDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).enterInterfaceDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).exitInterfaceDefinition(this);
		}
	}

	public final InterfaceDefinitionContext interfaceDefinition() throws RecognitionException {
		InterfaceDefinitionContext _localctx = new InterfaceDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_interfaceDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__3);
			setState(108);
			identifier();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(109);
				match(T__4);
				setState(110);
				identifier();
				}
			}

			setState(113);
			match(T__1);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__13) | (1L << T__14) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				setState(114);
				classBody();
				}
			}

			setState(117);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefinitionContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public ClassDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).enterClassDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OCLListener ) ((OCLListener)listener).exitClassDefinition(this);
		}
	}

	public final ClassDefinitionContext classDefinition() throws RecognitionException {
		ClassDefinitionContext _localctx = new ClassDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__5);
			setState(120);
			identifier();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(121);
				match(T__4);
				setState(122);
				identifier();
				}
			}

			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(125);
				match(T__6);
				setState(126);
				idList();
				}
			}

			setState(129);
			match(T__1);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__13) | (1L << T__14) | (1L << T__26) | (1L << T__27))) != 0)) {
				{
				setState(130);
				classBody();
				}
			}

			setState(133);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public List<ClassBodyElementContext> classBodyElement() {
			return getRuleContexts(ClassBodyElementContext.class);
		}
		public ClassBodyElementContext classBodyElement(int i) {
			return getRuleContext(ClassBodyElementContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
